tree-sitter-glyph/test/corpus/body_context.txt
================================================================================
Skill with body-level context markers
================================================================================

skill review_code()
    description: "Review code for issues."
    context project_conventions
    context "Always check for security vulnerabilities."
    flow:
        "Scan the repository for issues."
        "Report findings."

text project_conventions = "This project follows strict linting rules."

--------------------------------------------------------------------------------

(source_file
  (skill_declaration
    name: (identifier)
    (parameter_list)
    (declaration_body
      (description_section
        content: (string_literal
          (string_content)))
      (context_marker
        (identifier))
      (context_marker
        (string_literal
          (string_content)))
      (flow_section
        (flow_statement
          (inline_instruction
            (string_literal
              (string_content))))
        (flow_statement
          (inline_instruction
            (string_literal
              (string_content)))))))
  (text_declaration
    name: (identifier)
    value: (string_literal
      (string_content))))
