tree-sitter-glyph/test/corpus/constraints_and_types.txt
================================================================================
Constraints section with all four marker forms
================================================================================

skill foo()
    constraints:
        require accuracy
        avoid stale_references
        must root_cause_before_fix
        must avoid silent_failures
    flow:
        "x"

const accuracy = "x"
const stale_references = "y"
const root_cause_before_fix = "z"
const silent_failures = "w"

--------------------------------------------------------------------------------

(source_file
  (skill_declaration
    name: (identifier)
    (parameter_list)
    (declaration_body
      (constraints_section
        (require_marker
          (identifier))
        (avoid_marker
          (identifier))
        (must_marker
          (identifier))
        (must_avoid_marker
          (identifier)))
      (flow_section
        (flow_statement
          (inline_instruction
            (string_literal
              (string_content)))))))
  (const_declaration
    name: (identifier)
    value: (string_literal
      (string_content)))
  (const_declaration
    name: (identifier)
    value: (string_literal
      (string_content)))
  (const_declaration
    name: (identifier)
    value: (string_literal
      (string_content)))
  (const_declaration
    name: (identifier)
    value: (string_literal
      (string_content))))

================================================================================
Typed parameters with return type and type annotations
================================================================================

block make_plan(ctx: Context, risk: String = "medium") -> Plan
    flow:
        "x"
        return draft

--------------------------------------------------------------------------------

(source_file
  (block_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        (type_annotation
          type: (type_identifier)))
      (parameter
        name: (identifier)
        (type_annotation
          type: (type_identifier))
        default: (string_literal
          (string_content))))
    (return_type
      type: (type_identifier))
    (declaration_body
      (flow_section
        (flow_statement
          (inline_instruction
            (string_literal
              (string_content))))
        (flow_statement
          (return_statement
            value: (identifier)))))))
